--- a/style.css
+++ b/style.css
@@ -9,11 +9,19 @@ body {
   font-family:  Arial, "Helvetica Neue", Helvetica, sans-serif;
   font-size: 18px;
 }
-section h3, section h2 {
+section h3, section h2, #spec dt {
   color: #1A1F3C;
   font-variant: small-caps;
+  font-weight: bold;
   margin: 1em 0;
 }
+h2 {
+  font-size: 27px;
+}
+h3, dt {
+  font-size: 21px;
+}
+
 section h2 {
   margin-left: 2em;
 }
@@ -22,7 +30,7 @@ section p {
 }
 
 /* Sätt bredd för alla element på ett och samma ställe */
-header, main, footer {
+main, footer {
   width: 1200px;
   margin-left: auto;
   margin-right: auto;
@@ -94,11 +102,6 @@ nav ul li a:hover { /* Spegla färgerna för att markera vilken länk muspekaren
   background-color: #BAAA9A;
 }
 
-main { /* Lägg allt innehåll mitt i webläsaren */
-  background-color: #FFFFFF;
-
-
-}
 section { /* för att kunna flytta element inom sektioner med position:absolute  */
   position: relative;
   padding-top: 70px;
@@ -111,6 +114,7 @@ section { /* för att kunna flytta element inom sektioner med position:absolute 
 }
 
 #reklamVid {
+  border: none;
 }
 
 #video h2 {
@@ -144,21 +148,20 @@ left: 0;
 /* ---------------------------------------------------*/
 /** Kod för att styla element i panelen för GALLERI  **/
 #galleri {
+  height: 520px;
+}
+#galleriFig {
+  margin: 10px 0 0 20px;
+  padding: 0;
+  width: 700px;
   height: 500px;
 }
 
-#galleriFig {
-  width: 65%;
-  height: 380px;
-  border: solid 1px black; /* Ta BORT När bild finnes */
-  margin: 10px 0 0 0;
-  padding: 0;
-}
 #galleriText {
   top: 8em;
   right: 2em;
   position: absolute;
-  width: 30%;
+  width: 450px;
 }
 
 .panel_Text {
@@ -176,13 +179,7 @@ left: 0;
   height: 100%;
   margin: 0;
   padding: 0;
-}
-.spec_panel p {
-  margin: 0;
-  padding: 0;
-}
-.spec_panel p:first-of-type { /* Gör plats mellan rubrik och början på specifikationerna */
-  margin-top: 1em;
+  line-height: 150%;
 }
 
 /* ----------------------------------------------------------*/
